2008-02-09  Vincent Untz  <vuntz@gnome.org>

	Port to gio.
	Based on patch by Diego Escalante Urrelo <diegoe@gnome.org>
	Fix part of bug #509756.

	* clock-location.c: (monitor_etc_sysconfig_clock): updated for
	GFileMonitor changed signal
	(zone_from_etc_sysconfig_clock): use GFileMonitor
	(clock_location_finalize): free the monitor

==================== 2.21.90 ====================

2008-01-28  Luca Ferretti  <elle.uca@libero.it>

	* gnome-clock-applet-mechanism.policy.in:
	Change <message> strings to match the ones from PolicyKit package.

2008-01-28  Luca Ferretti  <elle.uca@libero.it>

	* gnome-clock-applet-mechanism.policy.in: fix my broken patch...

2008-01-28  Vincent Untz  <vuntz@gnome.org>

	* Makefile.am: clean this a bit

2008-01-28  Vincent Untz  <vuntz@gnome.org>

	* Makefile.am: updated to intltoolize the policy.in file
	* gnome-clock-applet-mechanism.policy: moved...
	* gnome-clock-applet-mechanism.policy.in: ... here, and mark strings
	as translatable
	Fix bug #510635. Patch by Luca Ferretti <elle.uca@libero.it>

2008-01-28  Vincent Untz  <vuntz@gnome.org>

	* Makefile.am: define where Locations.xml is (via pkg-config)
	* gweather-xml.c: (gweather_xml_load_locations): updated for the
	change
	Fix bug #509888.
	Patch by Patryk Zawadzki <patrys@pld-linux.org>

2008-01-28  Vincent Untz  <vuntz@gnome.org>

	* calendar-window.c: (create_hig_frame): fix compilation when there's
	no eds support. Fix bug #509840.
	Patch by Saleem Abdulrasool <compnerd@compnerd.org>

2008-01-25  Matthias Clasen  <mclasen@redhat.com>

	* clock.schemas.in: Add list_type for cities.

2008-01-20  Christian Persch  <chpe@gnome.org>

	* Makefile.am: Add --internal when generating the marshalers.

2008-01-16  Christian Persch  <chpe@gnome.org>

	* clock.glade: Fix minor HIGness problems in Prefs dialogue (spacings,
	missing mnemonics).

2008-01-16  Matthias Clasen <mclasen@redhat.com>

	* Makefile.am (EXTRA_DIST): This must not depend on 