@@ -1,3 +1,12 @@
+2009-02-09  Matthias Clasen  <mclasen@redhat.com>
+	
+	* pixmaps/clock-map.png: png version of the world map that is
+	10 times smaller than the svg.
+
+	* pixmaps/Makefile.am: Install clock-map.png
+
+	* clock-map.c: Load the map as png.
+
 2008-02-09  Vincent Untz  <vuntz@gnome.org>
 
 	Port to gio.
